tests/errors/literals/u8-overflow-direct.fn
---
Description: Direct literal 256 overflows u8
Expected: FN3200
---

type Program
{
    static fn Main -> i32
    {
        var v: u8 = 256
        return 0
    }
}
